2005-12-02 [wwp]	1.9.100cvs54

	* src/quote_fmt.h
	* src/quote_fmt_parse.y
		fix misuse of gboolean*, use gboolean instead
		(thanks to Paul, Colin, for pointing out that scaring one)

2005-12-02 [paul]	1.9.100cvs53

	* src/plugins/clamav/clamav_plugin.c
		int no --> unsigned int no
	* src/plugins/clamav/clamav_plugin_gtk.c
		rework config page

2005-12-02 [wwp]	1.9.100cvs52

	* src/compose.c
	* src/prefs_template.c
	* src/quote_fmt.h
	* src/quote_fmt_parse.y
		prevent from executing |f and |p templates commands when
		adding or replacing templates in prefs (avoids annoying and
		potentially dangerous behaviours)

2005-12-02 [paul]	1.9.100cvs51

	* src/prefs_common.c
		allow translation of some default values
		Patch by Fabien Vantard

2005-12-02 [paul]	1.9.100cvs50

	* src/codeconv.c
	* src/codeconv.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_message.c
	* src/textview.c
		remove obsolete 'convert_mb_alnum' option
		and related stuff
	* src/gtk/about.c
		remove unused 'about_textview_visibility_notify'

2005-12-02 [paul]	1.9.100cvs49

	* src/prefs_account.c
	* src/prefs_compose_writing.c
	* src/prefs_fonts.c
	* src/prefs_gtk.h
	* src/prefs_image_viewer.c
	* src/prefs_message.c
	* src/prefs_other.c
	* src/prefs_receive.c
	* src/prefs_send.c
	* src/prefs_spelling.c
	* src/prefs_summaries.c
	* src/prefs_wrapping.c
	* src/plugins/dillo_viewer/dillo_prefs.c
	* src/plugins/pgpcore/prefs_gpg.c
		several cleanups to the prefs dialogs
		(slightly modified) patch by Fabien Vantard

2005-12-02 [paul]	1.9.100cvs48

	* src/main.c
		--exit means exit
	* src/send_message.c
		fix crash on send when connection fails

	Thanks to Colin

2005-12-01 [colin]	1.9.100cvs47

	* src/html.c
		Translate &hellip; to "..."

2005-11-30 [colin]	1.9.100cvs46

	* src/matcher.c
	* src/matcher.h
		Optimize back yesterday's fix.

2005-11-30 [paul]	1.9.100cvs45

	* manual/faq.xml
		standardised
	* manual/intro.xml
		written by Colin, edited by me

2005-11-29 [colin]	1.9.100cvs44
