@@ -1038,3 +1038,4 @@
 ( cvs diff -u -r 1.382.2.198 -r 1.382.2.199 src/compose.c;  cvs diff -u -r 1.12.2.17 -r 1.12.2.18 src/prefs_template.c;  cvs diff -u -r 1.5.12.2 -r 1.5.12.3 src/quote_fmt.h;  cvs diff -u -r 1.22.2.14 -r 1.22.2.15 src/quote_fmt_parse.y;  ) > 1.9.100cvs52.patchset
 ( cvs diff -u -r 1.13.2.15 -r 1.13.2.16 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.9.2.12 -r 1.9.2.13 src/plugins/clamav/clamav_plugin_gtk.c;  ) > 1.9.100cvs53.patchset
 ( cvs diff -u -r 1.5.12.3 -r 1.5.12.4 src/quote_fmt.h;  cvs diff -u -r 1.22.2.15 -r 1.22.2.16 src/quote_fmt_parse.y;  ) > 1.9.100cvs54.patchset
+( cvs diff -u -r 1.13.2.16 -r 1.13.2.17 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.3.2.3 -r 1.3.2.4 src/plugins/clamav/clamav_plugin.h;  cvs diff -u -r 1.9.2.13 -r 1.9.2.14 src/plugins/clamav/clamav_plugin_gtk.c;  cvs diff -u -r 1.18.2.13 -r 1.18.2.14 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.4.2.4 -r 1.4.2.5 src/plugins/spamassassin/spamassassin.h;  cvs diff -u -r 1.23.2.15 -r 1.23.2.16 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 1.9.100cvs55.patchset
