@@ -39,5 +39,6 @@ ClamAvConfig *clamav_get_config		  (void);
 void	      clamav_save_config	  (void);
 void 	      clamav_set_message_callback (MessageCallback callback);
 gint	      clamav_gtk_init(void);
+void 	      clamav_gtk_done(void);
 
 #endif
